--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,5 +5,5 @@ production:
   amqp_url: amqp://guest:guest@rabbitmq:5672/service
   mongodb_uri: mongodb://mongodb:27017/service
 test:
-  amqp_url: 
-  mongodb_uri: 
+  amqp_url: test_rabbit_url
+  mongodb_uri: test_mongo_url
