--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,9 +1,12 @@
 development:
+  store_adapter: mongodb
   amqp_url: amqp://guest:guest@0.0.0.0:5672/service
   mongodb_uri: mongodb://0.0.0.0:27017/service
 production:
+  store_adapter: mongodb
   amqp_url: amqp://guest:guest@rabbitmq:5672/service
   mongodb_uri: mongodb://mongodb:27017/service
 test:
+  store_adapter: in_mem
   amqp_url: test_rabbit_url
   mongodb_uri: test_mongo_url
